# multi-object-tracking-algorithm

./: .gitignore  AGENTS.md  DCF-zrobione.ipynb  PLAN.md  PRESENTATION.html  README.md  SiamTrack-zrobione.ipynb  WYJASNIENIE.md  lab07.ipynb  projekt-opis.txt  pyproject.toml  requirements.txt
config/: best_from_grid.yaml  default.yaml  grid_search.yaml
mot/: __init__.py  association.py  io.py  iou.py  kalman.py  paths.py  tracker.py  types.py
notebooks/: mot_eda.ipynb
outputs/logs/: grid_search_results.json  train_eval_summary.json
outputs/test_predictions/: MOT_01.txt  MOT_06.txt  MOT_07.txt
outputs/train_predictions/: MOT_02.txt  MOT_03.txt  MOT_04.txt  MOT_05.txt
outputs/train_predictions_stage2/: MOT_02.txt  MOT_04.txt
scripts/: association.py  constants.py  defaults.py  eda_dataset.py  evaluate_train.py  generate_presentation_html.py  io.py  iou.py  kalman.py  package_submission.py  postprocess.py  run_grid_search.py  run_test.py  run_train.py  tracker.py  tune_grid.py  types.py  visualize_tracks.py
source/: README.md  requirements.txt
source/config/: default.yaml
source/mot/: __init__.py  geometry.py  io.py  kalman.py  postprocess.py
source/notebooks/: mot_eda.ipynb
source/outputs/eda/: EDA_REPORT.md
source/outputs/logs/: train_eval_stage2_summary.json  train_eval_summary.json
source/outputs/test_predictions/: MOT_01.txt  MOT_06.txt  MOT_07.txt
source/outputs/train_predictions/: MOT_02.txt  MOT_03.txt  MOT_05.txt
source/scripts/: eda_dataset.py  package_submission.py  run_test.py  visualize_tracks.py
(+2 files in other folders)
