[project]
name = "multi-object-tracking"
version = "0.1.0"
description = "MOT tracking-by-detection (det.txt → tracks)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["matplotlib", "jupyter", "ipykernel"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mot*", "scripts*"]
